Cambios a la primera interfaz con logo

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">DIETGRAM</string>
+    <string name="app_name">GARANTEMEX</string>
     <string name="s_nombre">Nombre</string>
     <string name="s_apellidos">Apellidos</string>
     <string name="s_apellido_p">Apellido Paterno</string>
